Implement created at and updated at props and add eslint/prettier

--- a/package.json
+++ b/package.json
@@ -6,7 +6,31 @@
   "repository": "https://github.com/ndelvalle/goosetrack.git",
   "author": "ndelvalle <nicolas.delvalle@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint . --ext .js",
+    "format": "prettier --write '**/*.{js,json,md}'",
+    "format:changed": "pretty-quick",
+    "format:staged": "pretty-quick --staged"
+  },
   "engines": {
     "node": ">=4"
-  }
+  },
+  "dependencies": {
+    "dot-prop": "^4.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "husky": "^0.14.3",
+    "prettier": "^1.12.1",
+    "pretty-quick": "^1.4.1"
+  },
+  "pre-commit": [
+    "format:staged",
+    "lint",
+    "test"
+  ]
 }
